# mayara-server

./: .dockerignore  AGENTS.md  CHANGELOG.manual.md  CHANGELOG.md  CLIENT.md  Cargo.toml  DEVELOPER.md  Dockerfile  Dockerfile.ci  Makefile  README.md  TODO.md  USAGE.md  build.rs  cliff.toml  docker-compose.yml
.github/workflows/: changelog.yml  docker.yml  release.yml  rust.yml
client-examples/bash-client/: radar_info.sh
client-examples/javascript-client/: spoke_viewer.mjs
client-examples/python-client/: run-target-viewer.sh  spoke_viewer.py  target_viewer.py
dev/furuno/: nnd-parser.py
docker/: docker-compose.yml
docs/: deployment.md  furuno-setup.md  koden-setup.md
docs/design/: architecture.md  batch-control-init.md  controllers.md  crate-structure.md  data-flows.md  debug-infrastructure.md  deployment-modes.md  external-clients.md  implementation-status.md  io-provider.md  known-issues.md  multicast-architecture.md  radar-engine.md  recording-playback.md
docs/develop/: building.md  getting_started.md
docs/idea-not-implemented-review-first/: project-freedom.md
docs/internals/: README.md  arpa.md  new_radar_brand.md
docs/radar-API/: impl_sk_radar_api_v6.md
docs/radar-protocols/furuno/: protocol.md
docs/radar-protocols/navico/: protocol copy.md  protocol.md
docs/user-guide/: protocol-debugger.md
examples/: generate-fixtures.rs
mayara-core/: Cargo.toml
mayara-core/src/: connection.rs  dual_range.rs  error.rs  io.rs  lib.rs  locator.rs  radar.rs  state.rs
mayara-core/src/arpa/: cpa.rs  detector.rs  history.rs  kalman.rs  mod.rs  polar.rs  target.rs  tracker.rs  types.rs
mayara-core/src/capabilities/: builder.rs  controls.rs  mod.rs  range_format.rs
mayara-core/src/controllers/: furuno.rs  garmin.rs  navico.rs  raymarine.rs
mayara-core/src/engine/: mod.rs
mayara-core/src/guard_zones/: zone.rs
mayara-core/src/models/: furuno.rs  garmin.rs  mod.rs  navico.rs  raymarine.rs
mayara-core/src/protocol/: garmin.rs  mod.rs  navico.rs  raymarine.rs
mayara-core/src/protocol/furuno/: command.rs  dispatch.rs  mod.rs  report.rs
mayara-core/src/trails/: history.rs
mayara-server/: build.rs
mayara-server/src/: control_factory.rs  core_locator.rs  lib.rs  locator.rs  settings.rs  storage.rs  tokio_io.rs  web.rs
mayara-server/src/brand/furuno/: data.rs  mod.rs  report.rs  settings.rs
mayara-server/src/brand/garmin/: report.rs
mayara-server/src/brand/navico/: data.rs  info.rs  mod.rs  report.rs  settings.rs
mayara-server/src/brand/raymarine/: mod.rs  report.rs  settings.rs
mayara-server/src/brand/raymarine/report/: quantum.rs  rd.rs
mayara-server/src/debug/: change_detection.rs  hub.rs  io_wrapper.rs  mod.rs  passive_listener.rs  recording.rs
mayara-server/src/debug/decoders/: furuno.rs  garmin.rs  mod.rs  navico.rs  raymarine.rs
mayara-server/src/network/: mod.rs
mayara-server/src/network/linux/: mod.rs
mayara-server/src/network/macos/: mod.rs
mayara-server/src/network/windows/: mod.rs
mayara-server/src/radar/: mod.rs  range.rs  target.rs  trail.rs
mayara-server/src/recording/: file_format.rs  manager.rs  mod.rs  player.rs  recorder.rs
research/furuno/: spoke-frame-header.md  timezero-dual-range.md
research/furuno/captures/: README.md  drs4dnxt-dual-range-tcp.pcap
src/lib/: ais.rs  config.rs  locator.rs  mod.rs  navdata.rs  nnd.rs  pcap.rs  replay.rs  signalk.rs  stream.rs  util.rs
src/lib/brand/: mod.rs
src/lib/brand/emulator/: command.rs  mod.rs  report.rs  settings.rs  world.rs
src/lib/brand/furuno/: command.rs  mod.rs  protocol.rs  report.rs  settings.rs
src/lib/brand/garmin/: capabilities.rs  command.rs  discovery.rs  mod.rs  protocol.rs  range_table.rs  report.rs  settings.rs
src/lib/brand/koden/: command.rs  mod.rs  protocol.rs  report.rs  settings.rs
src/lib/brand/navico/: capabilities.rs  command.rs  info.rs  mod.rs  protocol.rs  report.rs  settings.rs
src/lib/brand/raymarine/: command.rs  mod.rs  navdata.rs  protocol.rs  report.rs  settings.rs
src/lib/brand/raymarine/command/: quantum.rs
src/lib/brand/raymarine/report/: quantum.rs
src/lib/brand/raymarine/testdata/: quantum-boot.txt
src/lib/network/: mod.rs
src/lib/network/linux/: mod.rs
src/lib/network/macos/: mod.rs
src/lib/network/windows/: mod.rs
src/lib/radar/: cpa.rs  exclusion.rs  mod.rs  range.rs  settings.rs  target.rs  trail.rs  units.rs
src/lib/recording/: manager.rs  mod.rs  player.rs  recorder.rs
test/: subscribe.sh
tests/: api_rest.rs  api_stream.rs  replay_furuno.rs  replay_furuno_nnd.rs  replay_garmin.rs  replay_navico_4g.rs  replay_navico_br24.rs  replay_navico_halo20plus.rs  replay_navico_halo24.rs  replay_navico_halo3006.rs  replay_raymarine.rs  run-integration.sh  websocket_ais.rs
web/gui/: api.js  control.js  controls.css  layout.css  mayara.js  ppi.js  spoke_processor.js  units.js  viewer.js
