[package]
name = "mayara"
version = "3.4.0"
edition = "2024"
rust-version = "1.90"
description = "Marine radar server with REST API and WebSocket support"
license = "Apache-2.0"
readme = "README.md"
keywords = ["radar", "marine", "server", "websocket", "rest-api"]
categories = ["network-programming", "web-programming::http-server"]

[package.metadata]
api-version = "3.2.0"

[lib]
name = "mayara"
path = "src/lib/mod.rs"

[features]
navico = []
furuno = []
garmin = []
raymarine = []
emulator = []
# default = ["navico", "furuno", "raymarine"]
default = ["navico", "furuno", "garmin", "raymarine", "emulator"]

[dependencies]
ctor = "0.1"
anyhow = "1.0.102"
async-trait = "0.1.89"
atomic_float = "1.1.0"
axum = { version = "0.8.8", features = ["http2", "json", "macros", "tokio", "tower-log", "tracing", "ws"] }
axum-core = "0.5.6"
axum-embed = "0.1.0"
base64 = "0.22.1"
bincode = "1.3.3"
bitflags = "2.11.0"
chrono = { version = "0.4.44", features = ["serde"] }
clap = { version = "4.5.60", features = ["derive"] }
clap-verbosity-flag = "2.2.3"
crossbeam = "0.8.4"
directories = "5.0.1"
enum-primitive-derive = "0.3.0"
env_logger = "0.11.9"
futures = "0.3.32"
futures-util = "0.3.32"
headers = "0.4.1"
http = "1.4.0"
http-body-util = "0.1.3"
hyper = "1.8.1"
hyper-util = "0.1.20"
libc = "0.2.182"
log = "0.4.29"
mdns-sd = "0"
miette = { version = "7.6.0", features = ["fancy"] }
nalgebra = { version = "0.33.2", features = ["std", "macros", "convert-mint", "rand"] }
ndarray = "0.16.1"
network-interface = "2.0.5"
nix = { version = "0.29.0", features = ["net", "socket"] }
nmea-parser = { git = "https://github.com/keesverruijt/nmea-parser", "branch" = "position_precision" }
num-derive = "0.4.2"
num-traits = "0.2.19"
once_cell = "1.21.3"
protobuf = "3.7.2"
rust-embed = { version = "8.11.0", features = ["axum","interpolate-folder-path"] }
serde = { version = "1.0.228", features = ["derive", "serde_derive"] }
serde_json = "1.0.149"
serde_repr = "0.1.20"
serde_with = { version = "3.17.0", features = ["macros"] }
sha1 = "0.10.6"
socket2 = "0.5.10"
strum = { version = "0.27.2", features = ["derive"] }
terminal_size = "0.3.0"
thiserror = "1.0.69"
time = { version = "0.3.47", features = ["formatting"] }
tokio = { version = "1", features = ["full"] }
tokio-graceful-shutdown = "0.15.4"
tokio-shutdown = "0.1.5"
# tokio-tungstenite = "0.26.2"
tokio-tungstenite = { git = "https://github.com/keesverruijt/tokio-tungstenite", features = [ "deflate" ] }
tokio-util = "0.7.18"
tower = "0.5.3"
tower-http = { version = "0.6", features = ["trace"] }
tungstenite = { git = "https://github.com/keesverruijt/tungstenite-rs.git", branch = "permessage-deflate", features = [ "deflate" ] }
itoa = "1.0.17"
utoipa = { version = "5", features = ["macros", "axum_extras", "chrono", "time", "url", "repr" ] }
serde_string_enum = "0.2.1"
unicase = "2.9.0"
wildmatch = "2.6.1"
utoipa-swagger-ui = { version = "9.0.2", features = ["url", "axum"] }
# tungstenite = { path = "../tungstenite-rs", features = [ "handshake", "deflate" ] }

[target.'cfg(target_os = "macos")'.dependencies]
core-foundation = "0.9.4"
system-configuration = "0.6.1"

[target.'cfg(target_os = "linux")'.dependencies]
netlink-sys = { version = "0.8.8", features = ["tokio", "tokio_socket"] }
rtnetlink = "0.14.1"

[target.'cfg(target_os = "windows")'.dependencies]
w32-error = "1.0.0"
windows = { version = "0.59.0", features = ["Win32_NetworkManagement_IpHelper", "Win32_NetworkManagement_WiFi", "Win32_Networking_WinSock", "Win32_System", "Win32_System_Threading", "Win32_Security", "Win32_System_Diagnostics", "Win32_System_Diagnostics_Debug", "Win32_System_IO", "Win32_NetworkManagement_Ndis", "Win32_Networking_WinSock", "Win32_System_SystemServices" ] }

[build-dependencies]
protobuf-codegen = "3.7.2"
openssl = { version = "0.10", features = ["vendored"] }
reqwest = { version = "0.12.28", default-features = false, features = ["rustls-tls", "blocking"] }
rust-embed = { version = "8.11.0", features = ["axum","interpolate-folder-path"] }

[dev-dependencies]
reqwest = { version = "0.12.28", features = ["json"] }
tokio-test = "0.4"
tempfile = "3"

