[package]
name = "mayara-core"
version = "0.5.1"
edition = "2021"
description = "Platform-independent radar protocol library for Mayara"
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/MarineYachtRadar/mayara-server"
keywords = ["radar", "marine", "furuno", "navico", "protocol"]
categories = ["parsing", "science", "embedded"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[lib]
name = "mayara_core"
path = "src/lib.rs"

[features]
default = ["navico", "furuno", "raymarine", "garmin"]
navico = []
furuno = []
raymarine = []
garmin = []

[dependencies]
# Minimal dependencies - no I/O, no async, no platform-specific code
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
bincode = "1.3"
bitflags = "2.4"
nalgebra = "0.32"
strum = { version = "0.27", features = ["derive"] }

# Note: NO tokio, NO socket2, NO network-interface, NO platform crates
